# blockchain-project-from-scratch

./: .gitignore  Cargo.toml
crates/chain/: Cargo.toml
crates/layer2/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives/src/: commitment.rs  groth16.rs  kzg.rs  lib.rs  merkle.rs  qap.rs  r1cs.rs  signature.rs
crates/primitives/src/circuits/: merkle.rs  mod.rs  poseidon.rs
crates/primitives/src/curve/: g1.rs  g2.rs  mod.rs  pairing.rs
crates/primitives/src/field/: fp.rs  fp12.rs  fp2.rs  fp6.rs  fr.rs  mod.rs
crates/primitives/src/hash/: mod.rs  poseidon.rs
crates/primitives/src/plonk/: arithmetization.rs  lookup.rs  mod.rs  permutation.rs  prover.rs
crates/privacy/: Cargo.toml
crates/zkvm/: Cargo.toml
