[workspace]
members = [
    "crates/primitives",
    "crates/zkvm",
    "crates/chain",
    "crates/layer2",
    "crates/privacy",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# STARK (zkvm에서 Merkle commitment용)
sha2 = "0.10"

# Utilities
rand = "0.8"
rand_chacha = "0.3"
